src/objects/LoginIntegrazioneAP__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Login Org Artmatica per integrazione opportunita</description>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>ConsumerKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointLogin__c</fullName>
        <label>EndPointLogin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshToken__c</fullName>
        <label>RefreshToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LoginIntegrazioneAP</label>
</CustomObject>